# planthire-ai-mcp

./: .mcp.json  LICENSE  README.md  glama.json  package.json  pyproject.toml  server.py  smithery.yaml
.well-known/mcp/: server-card.json
